--- a/src/app/webs/hardwareseguridad/hardwareseguridad.component.html
+++ b/src/app/webs/hardwareseguridad/hardwareseguridad.component.html
@@ -1,1 +1,16 @@
-<p>hardwareseguridad works!</p>
+<div class="Secciones">
+  <h1>¿Qué es la seguridad del hardware?</h1>
+  <p>
+    A la hora de asegurar el hardware de sus ordenadores de empresa, muchos administradores de TI piensan primero en adquirir soluciones basadas en software, tales como anti-malware o programas de antivirus. Sin embargo, los ciberataques se están desplazando hacia abajo en la pila del sistema. La seguridad por software por sí sola ya no es suficiente para proteger los ordenadores. La protección debe estar integrada en el propio hardware.
+  </p>
+    <h2>¿Por qué importan las características de seguridad basadas en hardware?</h2>
+    <div class="youtube">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/W_MItz5NzVU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  <p>
+    La seguridad informática basada en hardware es absolutamente esencial para cualquier organización e industria, ya sea para una multinacional, la administración pública o un pequeño negocio.
+    <br> Un negocio que experimenta un ataque relacionado con su seguridad informática puede sufrir daños duraderos. Para empezar, puede resultar en multas relacionadas con las filtraciones de datos. La reputación de la empresa también puede resultar dañada, lo que es difícil de cuantificar, si no imposible. Hay un riesgo de robo de propiedad intelectual u otra información sensible. Por último, hay tiempos de inactividad que pueden resultar muy caros si los empleados no pueden trabajar. Ciertos ataques, como la minería y captura criptográfica, provocan problemas con sistemas más lentos a medida que se gasta la CPU.
+    <br> Hoy en día más empleados trabajan de forma remota que nunca; y eso significa que más dispositivos acceden a la red corporativa más allá del firewall. Además, los datos y las aplicaciones se están mudando a la nube, donde se puede acceder en cualquier momento mediante una gama de dispositivos. Estos dispositivos deben permanecer seguros, sin importar dónde se estén utilizando.
+    <br> En cada capa de la pila del sistema, los ordenadores son solo tan seguros como la siguiente capa más baja. La seguridad debe construirse sobre una base de confianza que se establece en la capa más fundacional: el silicio.
+  </p>
+</div>
