--- a/src/app/webs/hardwareseguridad/llavesseguridad/llavesseguridad.component.html
+++ b/src/app/webs/hardwareseguridad/llavesseguridad/llavesseguridad.component.html
@@ -1,1 +1,18 @@
-<p>llavesseguridad works!</p>
+<div class="Secciones">
+  <h1>¿Qué es Llave de seguridad y en qué consiste?</h1>
+  <p>
+    En los últimos años la seguridad informática ha empezando a alcanzar el puesto de importancia que se merecía desde el principio. Tanto los usuarios como las compañías han comprendido el valor de proteger sus datos, cuentas y demás sistemas informáticos de los posibles ataques cibernéticos.
+    <br> Las contraseñas se han quedado cortas ante los avanzados sistemas que utilizan los ciberdelincuentes. Era necesario idear un sistema más complejo de identificación y para ello, surgió el sistema en dos pasos o FIDO. SMS o correos con un código que certifican que la persona que ha introducido su contraseña es la propietaria de esa cuenta y no otra persona que se ha hecho con los datos de manera fraudulenta.
+    <br> Tenemos tantas cuentas en distintas redes sociales, correos y demás servicios que procuramos poner siempre la misma contraseña y cuánto más fácil de recordar mejor, pero esto es un fallo de seguridad enorme, por eso se inventaron las llaves digitales, para no tener que recordar las claves y poder identificarnos de manera rápida y fácil, sabiendo que nadie más nos puede suplantar.
+    <br> Estos pequeños dispositivos en forma de puerto USB, llamados también “dongles”, se conectan a nuestros dispositivos, móviles, ordenadores y demás, y verifican que somos nosotros los que intentamos acceder a nuestra cuenta de cualquier aplicación sin necesidad de escribir la contraseña.
+    <br> Dentro de estos aparatos hay una clave criptográfica única, que nadie más tiene y que le indica al dispositivo y la aplicación que somos nosotros para que nos dé acceso. Se basa, como ya hemos avanzado antes, del sistema de autentificación en dos pasos o FIDO.
+  </p>
+    <div class="centrado">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/9-bjBtc9cI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p>
+      Estas llaves físicas se pueden conectar al ordenador, tablet o móvil con el conector USB, con un conector Lightning de Apple, con tecnología Bluetooth o NFC. Las puedes encontrar por un precio entre 6 y 70 euros dependiendo de los diferentes tipos de conexiones que ofrecen.
+    </p>
+</div>
+
+
