--- a/src/app/webs/hardwareseguridad/seguridadbiometrica/seguridadbiometrica.component.html
+++ b/src/app/webs/hardwareseguridad/seguridadbiometrica/seguridadbiometrica.component.html
@@ -1,1 +1,16 @@
-<p>seguridadbiometrica works!</p>
+<div class="Secciones">
+  <h1>¿Qué es la seguridad biometrica?</h1>
+  <p>
+    La seguridad biométrica es otra opción para proteger los dispositivos y la información privada a través de la biometría.
+    Estamos habituados a identificarnos mediante usuario y contraseña, pero cómo bien sabemos, estas pueden ser obtenidas por diferentes métodos, cómo ataques de fuerza bruta, ingeniería social, phishing, etc.
+    En cambio, el robo de rasgos biométricos se complica.
+    Realmente, es mucho más complicado que el robo de credenciales, pero aquí no acaban las
+    Por ejemplo, utilizamos un sistema de pago mediante huella dactilar a través de nuestro dispositivo móvil. ¿Es un sistema 100% seguro? Para que sea comprometido deberán capturarnos la huella y robarnos el dispositivo, por lo que no es completamente seguro, pero sí es más difícil y tedioso que consigan hacerlo.
+  </p>
+  <div class="centrado">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/_luyEw7SM3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+
+
+
