--- a/src/app/webs/identificarataques/falsapublicidad/falsapublicidad.component.html
+++ b/src/app/webs/identificarataques/falsapublicidad/falsapublicidad.component.html
@@ -1,1 +1,69 @@
-<p>falsapublicidad works!</p>
+<div class="Secciones">
+  <h1>La falsa publicidad</h1>
+  <p>
+    Existe una gran diferencia entre la publicidad y la publicidad engañosa, pero a simple vista, es complicado diferenciar una de otra si no disponemos de unos mínimos conocimientos.
+    <br> Por eso, hoy te explicamos ciertos aspectos que debes tener en cuenta para no ser víctima de estos fraudes cuando navegas por la red.
+    <br>
+    <br> La publicidad se utiliza con fines comerciales para aumentar la difusión de productos o servicios. A día de hoy, estamos acostumbrados a visualizar todo tipo de anuncios que nos aparecen mientras navegamos por Internet.
+    <br> Muchos ciberdelincuentes aprovechan la publicidad engañosa para lucrarse a costa de los usuarios. Esta publicidad, por lo general, es más intrusiva de lo habitual e incluso a veces impide al usuario seguir con su navegación. A continuación, te enseñamos los métodos de anuncios fraudulentos más utilizados por los ciberdelincuentes.
+  </p>
+    <h2>Enhorabuena has sido premiado</h2>
+    <p>
+    <br> Seguro que alguna vez al navegar por Internet te ha aparecido, de repente y sin esperarlo, un mensaje llamativo en el que te ofrecían participar en un sorteo con solo hacer un clic o rellenar una encuesta. También existe la versión en la que directamente te anuncian que has sido ganador de un premio gracias al número de tu IP o por ser el visitante un millón. Estos mensajes atraen la mirada del usuario con sus imágenes y letras parpadeantes, y le muestran regalos llamativos y actuales o una cantidad sustanciosa de dinero.
+  </p>
+</div>
+<div class="Seccion">
+  <img src="assets/images/HasGanado.png" alt="Imagen que muestra un falso premio" width="100%" class="l50">
+  <img src="assets/images/AmazonRegalo.jpg" alt="Imagen que muestra un falso premio" width="100%" class="r50">
+</div>
+<div class="Secciones">
+  <p>
+      Cuando veamos estos anuncios, debemos desconfiar de ellos por defecto, ya que <b>nadie regala algo sin recibir nada a cambio</b>, y mucho menos sin ni siquiera haber participado. Si hacemos clic sobre estos anuncios, en los siguientes pasos nos solicitarán datos personales como nombre, dirección, email, teléfono o tarjeta bancaria, con el fin de realizar compras online, acceder a tus cuentas o incluso ser extorsionados, sin recibir nunca el premio prometido.
+  </p>
+ <h2>Virus detectado</h2>
+  <p>
+    Este tipo de publicidad suele ser muy llamativa y atrae fácilmente la atención del usuario por la importancia que tiene una infección de nuestro dispositivo. Los ciberdelincuentes utilizan carteles parpadeantes con colores y símbolos de alerta y hacen uso de un lenguaje alarmante mencionando posibles pérdidas de información irreparables, por lo que el usuario siente que está corriendo un gran riesgo y que debe aplicar una solución lo más rápidamente posible.
+    <br> Estas alertas de malware van acompañadas de un botón que nos ofrece la solución todos nuestros problemas con un solo clic. Demasiado fácil, ¿no crees? Lo que ocultan estos botones es un enlace a otra página web con más publicidad o incluso que puede contener un malware.
+  </p>
+</div>
+<img src="assets/images/FalsoAnuncioVirus.png" alt="Imagen que muestra un falso virus" width="75%" class="centrarImg">
+<div class="Secciones">
+  <p> Cuando visualices en tu pantalla mensajes o ventanas emergentes de este estilo, desconfía, ya que el análisis de un dispositivo no se realiza de manera inmediata al acceder a una página web. Si realmente necesitas analizar tu dispositivo utiliza un antivirus.
+  </p>
+  <h2>Botones de descarga</h2>
+  <p>
+    Los usuarios estamos acostumbrados a buscar información (películas, música, programas, etc.) en Internet para descargarla, pero a veces, esta tarea no es tan fácil como desearíamos. Nos encontramos con infinidad de botones llamativos de descarga que enmascaran más publicidad engañosa.
+    <br>
+    <br> Por ejemplo, nos invitan a introducir nuestro número de móvil para continuar la descarga, pero en realidad nos estamos suscribiendo a un servicio de SMS Premium. Algunos botones enmascaran código malicioso, al hacer clic sobre ellos nos llevan a una ventana para instalar una extensión en nuestro navegador y así poder continuar con la descarga, pero jamás conseguiremos descargar el archivo que queremos, mientras que nuestro dispositivo se habrá infectado con algún tipo de malware.
+  </p>
+</div>
+<div class="Seccion">
+  <img src="assets/images/descargaFalso.jpg" alt="Imagen que muestra unos botones falsos de descarga" width="75%" class="centrarImg">
+</div>
+<div class="Secciones">
+  <p>
+    Si vas a descargar algo, analiza siempre la página en la que te encuentras. Fíjate bien que los botones no tengan la etiqueta de publicidad. Cuando pases el ratón por encima de ellos, revisa el enlace que contiene en la barra de estado, normalmente, ésta se encuentra en la parte inferior de la ventana. Por último, intenta utilizar páginas oficiales de descarga.
+  </p>
+  <h2>Iniciar reproducción</h2>
+  <p>
+    Con la llegada del streaming, Internet se empezó a utilizar para reproducir sin necesidad de descargar en nuestro equipo: vídeos, series, programas, películas, partidos de fútbol, etc. Esta tendencia también es muy aprovechada por los ciberdelincuentes para engañar a los usuarios, superponiendo botones similares a los de inicio de reproducción o que indican “ver ahora”. Estos enlazan con ventanas emergentes promocionando más publicidad o suscripciones a SMS Premium que solicitan introducir un número de teléfono móvil para iniciar la reproducción del vídeo que queremos ver.
+  </p>
+</div>
+<div class="Seccion">
+  <img src="assets/images/falsoReproductor.png" alt="Imagen que muestra unos botones falsos de reproduccion de video" width="75%" class="centrarImg">
+</div>
+<div class="Secciones">
+  <p>
+    Para no caer en la trampa, lee siempre la letra pequeña y si tienes que navegar por varias páginas más para iniciar la reproducción desconfía, porque posiblemente no llegues a ver lo que estás buscando.
+  </p>
+  <h2>Consejos</h2>
+  <ul>
+    <li>Mantén tus dispositivos actualizados con las últimas versiones de tu sistema operativo: Windows, iOS, Android, etc.</li>
+    <li>Protégete con un antivirus y realiza análisis periódicos de tus dispositivos.</li>
+    <li>Realiza copias de seguridad de tus datos.</li>
+    <li>Existen extensiones o complementos para los navegadores que bloquean este tipo de publicidad. (Ublock, adblock …)</li>
+  </ul>
+  <p>
+    Y lo más importante, recuerda siempre estar alerta cuando navegues por Internet y utiliza el sentido común.
+  </p>
+</div>
