--- a/src/app/webs/identificarataques/falsoscorreos/falsoscorreos.component.html
+++ b/src/app/webs/identificarataques/falsoscorreos/falsoscorreos.component.html
@@ -1,1 +1,26 @@
-<p>falsoscorreos works!</p>
+<div class="Secciones">
+  <h1>¿Qué es el phishing y cómo prevenirlo?</h1>
+  <p>
+  Entre los riegos con los que nos podemos encontrar cuando hacemos uso de Internet está el phishing, una técnica usada por ciberdelincuentes para obtener información personal y bancaria de los usuarios suplantando a una entidad legítima como puede ser un banco, una red social, una entidad pública, etc.
+  </p>
+  <img src="assets/images/bitcoin.png" alt="Imagen que muestra un falso correo" width="75%" class="centrarImg">
+  <h2>¿Cómo funciona el phishing?</h2>
+  <p>
+    Los ciberdelincuentes captan nuestra atención con alguna excusa con el fin de redirigirnos a páginas web fraudulentas que simulan ser legales y originales del servicio que ofertan. Cualquier sistema que permita el envío de mensajes puede ser usado como medio para intentar robar nuestra información personal. En algunos casos pueden llegar intentos de robo de nuestra información personal a través de emails, mensajes SMS o MMS (smishing), de la misma manera que por cualquier herramienta de mensajería instantánea (WhatsApp, LINE, etc.) o red social.
+  </p>
+  <h2>¿Qué hacer si lo detectas?</h2>
+  <ul>
+    <li>No contestes en ningún caso a estos correos. </li>
+    <li>No accedas a los enlaces facilitados en el mensaje ni descargues ningún documento adjunto.</li>
+    <li>Elimínalo y, si lo deseas, alerta a tus contactos sobre este fraude.</li>
+  </ul>
+  <h2>¿Cómo prevenirlo?</h2>
+  <ul>
+    <li>Sé precavido ante los correos que aparentan ser entidades bancarias o servicios conocidos, si tienes dudas ponte en contacto directo con la entidad o el servicio y nunca desde la informacion proporcionada por el correo.</li>
+    <li>Sospecha si hay errores gramaticales en el texto.</li>
+    <li>Si recibes comunicaciones genéricas dirigidas a "Estimado cliente", "Notificación a usuario" o "Querido amigo", es un indicio que te debe poner en alerta.</li>
+    <li>Si el mensaje te obliga a tomar una decisión en unas pocas horas, es mala señal. Contrasta directamente si la urgencia es real o no con el servicio a través de otros canales.</li>
+    <li>Revisa que el texto del enlace coincide con la dirección a la que apunta.</li>
+    <li>Un servicio con cierto prestigio utilizará sus propios dominios para las direcciones de email corporativas. Si recibes la comunicación desde un buzón de correo tipo @gmail.com o @hotmail.com, no es buena señal.</li>
+  </ul>
+</div>
