--- a/src/app/webs/identificarataques/identificarataques.component.html
+++ b/src/app/webs/identificarataques/identificarataques.component.html
@@ -21,8 +21,12 @@
         </p>
     </li>
   </ul>
+  <div class="youtube2">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2kmUTKfpofk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
   <p>
     Los dos puntos anteriores son claves para detectar posibles ciberataques, y todos ellos son bastante fáciles de monitorizar con las herramientas adecuadas, ya que muchas de estas crean avisos en función de unos parámetros introducidos previamente, como hace nuestro sistema operativo a quedarnos sin espacio en el disco duro.
+    <br>
     <br> Otros indicativos a tener en cuenta que van más ligados a una buenas prácticas de los usuarios podrían ser los siguientes:
   </p>
   <ul>
@@ -31,7 +35,9 @@
     <li> Envíos a compañeros que tu no has realizado.</li>
     <li> Lentitud en el ordenador y en internet.</li>
   </ul>
-  <p>
+</div>
+  <div class="Secciones">
+    <p>
     Los puntos anteriores son muy importantes que ya no dependen del responsable de sistemas, sino de las personas que día a día pueden informar de que algo puede fallar.
     Tener herramientas de prevención es importante pero también lo es el detectar el ciberataque lo antes posible, para evitar así su propagación.
   </p>
