--- a/src/app/webs/softwareseguridad/softwareseguridad.component.html
+++ b/src/app/webs/softwareseguridad/softwareseguridad.component.html
@@ -1,1 +1,14 @@
-<p>softwareseguridad works!</p>
+<div class="Secciones">
+  <h1>¿Qué es el software de seguridad?</h1>
+  <p>
+    El software de seguridad está diseñado para proteger los ordenadores de los programas maliciosos, como virus y malware. Es importante contar con un software de seguridad instalado en su equipo para protegerlo.
+    <br> El software de seguridad se actualiza continuamente. Semanales, mensuales, trimestrales - todo el tiempo. Y para la mayoría de los usuarios se realiza en segundo plano, por lo que no se dan cuenta.
+    <br> Existen diferentes programas de seguridad, como pueden ser antivirus, antimalware, gestores de contraseña, firewall …
+    <br> Es muy importante tener este software actualizado, y ejecutarlo regularmente.
+  </p>
+  <div class="centrado">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/orFsvHRxxGc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+
+
