--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background-color: #7A7A79;
+  background-color: #ebebeb;
 }
 #header{
   height: 70px;
@@ -10,7 +10,6 @@ body {
 .Secciones0{
   float: left;
   width: 79%;
-  background-color: aqua;
 }
 .SubSeccion01{
   float: left;
@@ -22,6 +21,10 @@ body {
 }
 .Secciones{
   float: left;
+  width: 100%;
+}
+.Seccion{
+  float: inline-end;
   width: 100%;
 }
 .Secciones video{
@@ -39,6 +42,14 @@ body {
   margin-bottom: 5px;
   margin-top: 5px;
 }
+.youtube2{
+  width: 500px;
+  height: 220px;
+  float: right;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
 .SubSeccion1{
   float: left;
   width: 29%;
@@ -47,44 +58,59 @@ body {
   float: right;
   width: 69%;
 }
+.l50{
+  float: left;
+  width: 45%;
+  height: 300px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.r50{
+  float: right;
+  width: 45%;
+  height: 300px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
 .logeo{
   float: right;
   width: 20%;
   clear: right;
-  background-color: red;
 }
 
 h1 {
   /*Pone la letra del h1 en 35 en negrita y en mayusculas*/
   font: 35px Arial;
-  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  text-transform: uppercase; text-shadow: 1px 2px 2px greenyellow;
   font-weight: bold;
   text-align: center;
-  color: white;
+  color: teal;
 }
 h2 {
   /*Pone la letra del h2 en 25 en negrita y en mayusculas*/
   font: 25px Arial;
-  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  text-transform: uppercase; text-shadow: 1px 2px 2px greenyellow;
   font-weight: bold;
   text-align: center;
   padding-top: 2%;
-  color: white;
+  color: teal;
 }
 h3 {
   /*Pone la letra del h2 en 25 en negrita y en mayusculas*/
   font: 20px Arial;
-  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  text-transform: uppercase; text-shadow: 1px 2px 2px greenyellow;
   font-weight: bold;
   text-align: center;
-  color: white;
+  color: teal;
 }
 h4 {
   /*Pone la letra del h2 en 25 en negrita y en mayusculas*/
   font: 15px Arial;
-  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  text-transform: uppercase; text-shadow: 1px 2px 2px greenyellow;
   font-weight: bold;
-  color: white;
+  color: teal;
 }
 .negrita {
   font-weight: bold;
@@ -129,6 +155,10 @@ display: table;
 font: 16px Arial;
 width: 100%;
 }
+.centrarImg{
+  display:block;
+  margin:auto;
+}
 etiqueta {display: table-row;}
 atributo, linea, archivo {
 display: table-cell;
@@ -139,4 +169,7 @@ border: 1px solid white;
   clear: both;
   height: 70px;
   padding-top: 2%;
+}
+ul{
+  text-justify: inter-word;
 }
