--- a/src/app/webs/softwareseguridad/antivirus/antivirus.component.html
+++ b/src/app/webs/softwareseguridad/antivirus/antivirus.component.html
@@ -1,9 +1,68 @@
 <div class="Secciones">
-  <h1></h1>
+  <h1>¿Qué es un antivirus?</h1>
   <p>
-
+    El software antivirus es un tipo de programa elaborado para evitar, detectar y suprimir infecciones de malware en dispositivos informáticos individuales, redes y sistemas de TI.
   </p>
   <div class="centrado">
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/fj1oaljk1-M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+  <p>
+    El software antivirus, originalmente diseñado para detectar y eliminar virus de los ordenadores, también puede proteger contra una amplia variedad de amenazas, incluidos otros tipos de software malicioso, como keyloggers, secuestradores de navegador, troyanos, gusanos, rootkits, spyware, adware, botnets y ransomware.
+  </p>
+  <h2>¿Cómo funciona?</h2>
+  <p>
+    El software antivirus generalmente se ejecuta como un proceso en segundo plano, escaneando ordenadores, servidores o dispositivos móviles para detectar y restringir la propagación de malware.
+    <br> Las funciones de detección y protección de amenazas en tiempo real están incluidas en muchos programas de software antivirus. Con ello se logra protección frente a posibles vulnerabilidades a medida que se producen, y escaneos del sistema que monitorizan los dispositivos y archivos del sistema para localizar posibles riesgos.
+    <br> El software antivirus generalmente realiza estas funciones básicas:
+  </p>
+  <ul>
+    <li>Escanear directorios o archivos específicos en busca de patrones maliciosos conocidos que indiquen la presencia de software malicioso</li>
+    <li>Permitir a los usuarios programar escaneos para que se ejecuten automáticamente</li>
+    <li>Permitir a los usuarios iniciar nuevos escaneos en cualquier momento</li>
+    <li>Eliminar cualquier software malicioso que detecte. Algunos programas de software antivirus hacen esto automáticamente en segundo plano, mientras que otros notifican a los usuarios de infecciones y les preguntan si desean limpiar los archivos.</li>
+  </ul>
+  <p>Para escanear sistemas de manera integral, el software antivirus generalmente debe tener acceso privilegiado a todo el sistema. Esto convierte al software antivirus en un objetivo común para los atacantes, y los investigadores han descubierto la ejecución remota de código y otras vulnerabilidades graves en los productos de software antivirus en los últimos años.</p>
+  <h2>¿Cuáles son los diferentes tipos de protección antivirus?</h2>
+  <p>
+    Varios tipos de programas antivirus han evolucionado a lo largo de los años.
+    <br> Al configurar tu sistema de protección, es importante comprender los programas antivirus más comunes disponibles.
+    </p>
+    <h4>Antivirus de firma de malware</h4>
+    <p>
+    El malware o software malicioso instala virus y spyware en tu ordenador o dispositivo sin tu conocimiento. El malware puede:
+  </p>
+  <ul>
+    <li>Robar tu información de inicio de sesión</li>
+    <li>Usar tu ordenador para enviar correo no deseado</li>
+    <li>Bloquear tu sistema informático</li>
+    <li>Dar acceso a los delincuentes informáticos a tus dispositivos y a la información almacenada en ellos, e incluso la capacidad de monitorizar y controlar tu actividad en línea.</li>
+  </ul>
+  <p>El software antivirus de firma de malware detecta firmas de malware, que son huellas digitales de software malicioso. La protección antivirus puede:</p>
+  <ul>
+    <li>Buscar códigos maliciosos específicos</li>
+    <li>Identificar virus específicos</li>
+    <li>Desabilitar o eliminar estos programas maliciosos</li>
+  </ul>
+  <p>Si bien la protección antivirus con firma de malware es clave para detectar y erradicar virus conocidos, una limitación es su incapacidad para abordar nuevos virus. El producto antivirus simplemente no contiene estas nuevas firmas de virus.</p>
+  <h4>Sistema de monitorización antivirus</h4>
+  <p>
+    Aquí es donde entra en juego el software antivirus de monitorización del sistema. Esta protección antivirus puede monitorizar el software y los sistemas informáticos para detectar comportamientos sospechosos o atípicos del usuario.
+    <br> Por ejemplo, las alertas se crean cuando un usuario se conecta a sitios desconocidos o intenta acceder a una gran cantidad de archivos, o cuando hay un aumento significativo en el uso de datos.
+  </p>
+  <h4>Antivirus de aprendizaje automático</h4>
+  <p>
+    Otra forma de protección pueden ser las técnicas de aprendizaje automático, que controlan los comportamientos «normales» del ordenador o la red.
+    <br> El software antivirus de aprendizaje automático puede limitar las actividades de los programas u ordenadores si parecen sospechosas.
+    <br> Más específicamente, la detección de aprendizaje automático implementa algoritmos para facilitar la detección de malware que tiene un alcance más amplio. Este tipo de protección antivirus es beneficioso porque funciona en conjunto con otras aplicaciones antivirus para proporcionar múltiples capas de protección.
+    <br> Un ejemplo de aprendizaje automático es el diseño del último software antivirus de Microsoft, que puede recopilar datos de más de 400 millones de ordenadores con Windows 10 para descubrir nuevo malware. Esto, a su vez, nos lleva de vuelta a la importancia de las firmas, ya que esta inteligencia permitirá el desarrollo de nuevas firmas para el último malware descubierto.
+    <br> Esta automatización es clave en su capacidad de mantenerse al tanto de los últimos virus.
+  </p>
+  <h4>Enlaces a antivirus con versiones gratuitas</h4>
+  <p>Os dejamos una pequeña lista con algunos antivirus que tienen version gratuita.</p>
+  <ul>
+    <li><a href="https://www.totalav.com/es/antivirus-gratis">TotalAV</a></li>
+    <li><a href="https://www.avira.com/es/acq-free-security?x-c-channel=sem6&x-a-source=Media&x-a-medium=SEM&x-a-network=Search&gclid=CjwKCAjw-e2EBhAhEiwAJI5jgzkDZy5w4Nayf31VVgAaDPLvDP-IuzB-m6CqCIF1vkkhexiECOsJKBoCCZYQAvD_BwE">Avira</a></li>
+    <li><a href="https://www.avast.com/es-es/lp-ppc-hp-v4?ppc_code=012&ppc=a&gclid=CjwKCAjw-e2EBhAhEiwAJI5jgxJRwb1ePpXpoZoPTGWjt5Zs2u_mjeR2oC-QMu0rQhTLsoWhfwtY3RoCmvAQAvD_BwE&gclsrc=aw.ds#pc">Avast</a></li>
+    <li><a href="https://www.avg.com/es-es/ppc/protection-offer-comparison-04?ppc_code=012&ppc=a&gclid=CjwKCAjw-e2EBhAhEiwAJI5jg2ySlI0Bizg6b7HbJksEdyeL4sV4-YB6gEdoRLmrVt1tP5wjfPHw1xoCikwQAvD_BwE&gclsrc=aw.ds">AVG</a></li>
+  </ul>
 </div>
