--- a/src/app/webs/softwareseguridad/gestorespasswd/gestorespasswd.component.html
+++ b/src/app/webs/softwareseguridad/gestorespasswd/gestorespasswd.component.html
@@ -1,1 +1,67 @@
-<p>gestorespasswd works!</p>
+<div class="Secciones">
+  <h1>¿Qué son los gestores de contraseñas?</h1>
+  <p>
+    Los gestores de contraseñas son aplicaciones que sirven para almacenar todas nuestras credenciales (usuarios, contraseñas, sitios web a los que corresponden, etc.) en una base de datos cifrada mediante una contraseña “maestra”. De este modo, podemos gestionar todas nuestras cuentas de usuario desde una misma herramienta, memorizando únicamente una clave maestra.
+    <br> Aunque las funciones y características de este tipo de aplicaciones pueden variar en función del fabricante, las más comunes son:
+  </p>
+  <ul>
+    <li>
+      <b>Acceso online y offline: </b>
+      algunos gestores dependen de un servidor en la nube para almacenar y sincronizar nuestras claves, aunque es una opción que no está exenta de riesgos, como fugas de información, vulnerabilidades en la nube o brechas de seguridad.
+      <br>No obstante, la mayoría dispone de un servicio de cifrado para proteger aún más nuestras credenciales. Por otro lado, los servicios que almacenan las contraseñas offline o en local, en principio son más seguros, aunque menos prácticos, ya que es necesario tener acceso al fichero concreto almacenado en el dispositivo para la consulta de las contraseñas, mientras que los servicios online permiten obtener las contraseñas desde cualquier sitio.
+    </li>
+    <li>
+      <b>Verificación en dos pasos: </b>
+      muchos gestores online incluyen esta función para proteger nuestras cuentas principales. En aquellos gestores que requieran una conexión a Internet, podremos vincular nuestras cuentas mediante este sistema de protección.
+    </li>
+    <li>
+      <b>Multidispositivo: </b>
+      en algunos gestores online podremos sincronizar nuestras contraseñas con el servidor del fabricante, ya que estas se alojarían en la nube debidamente protegidas. Para acceder a ellas solo debemos descargar una aplicación, normalmente multiplataforma, y acceder a nuestra cuenta con la cuenta maestra.
+    </li>
+    <li>
+      <b>Generación de contraseñas: </b>
+      crear una contraseña robusta desde cero puede llevar más tiempo del que pensamos, sobre todo si tenemos en cuenta que debemos crear una diferente para cada servicio. Por eso, estos gestores nos permiten crearlas automáticamente siguiendo una serie de criterios para que sean robustas.
+      <br> En ocasiones, pueden incluir la función de crear contraseñas de un solo uso, utilizadas en aquellos servicios de “usar y tirar”, como registrarnos en alguna promoción, leer un artículo que requiera de un registro, etc.
+    </li>
+    <li>
+      <b>Integración con los navegadores a través de plugins y autocompletado: </b>
+      esta función nos ayudará a automatizar y agilizar el proceso de insertar nuestras credenciales en la pantalla de acceso.
+    </li>
+    <li>
+      <b>Alertas de vulnerabilidad: </b>
+      algunos de los gestores pueden incluir esta función para alertarnos de si estamos utilizando una contraseña demasiado débil, está repetida en varios servicios o si dicho servicio ha sufrido una brecha de seguridad y debemos cambiar nuestras credenciales lo antes posible.
+    </li>
+  </ul>
+  <h2>¿Qué Tan Seguros Son los Administradores de Contraseñas?</h2>
+  <p>
+    Como te puedes imaginar, muchos consumidores están preocupados por la seguridad de los administradores de contraseñas.
+    <br> La respuesta corta es: son muy seguros.
+    <br> La mayoría de los administradores de contraseñas utilizan el Estándar de cifrado avanzado (AES – Advanced Encryption Standard) con claves generadas aleatoriamente de 256 bits.
+    <br> Se trata de una de las formas más altas de protocolos de seguridad que los administradores de contraseñas pueden utilizar para cifrar y proteger la información segura. Las claves generadas aleatoriamente encriptan la información almacenada en el software.
+    <br> Además, la mayoría de los administradores de contraseñas se encriptan localmente, lo que significa que nunca almacenan o revisan tu información. Antes de que tus contraseñas se guarden en el administrador de contraseñas, se encriptan para que la empresa ni siquiera conozca la información confidencial.
+    <br> Pero sobre todo, es importante recordar que los administradores de contraseñas son una mejor opción que otros métodos de almacenamiento de contraseñas como un cuaderno, Google Sheets o un documento de Word.
+    <br> Son más seguros e incluso ayudan con las medidas de seguridad del consumidor. Te ayudan a hacer contraseñas más complejas con generadores de contraseñas que, en última instancia, hace que tus procedimientos de acceso sean más seguros.
+    <br> Te guste o no, otros pueden estar tratando de entrar en tus cuentas. De hecho, más del 27% de las personas han intentado adivinar la contraseña de otra persona, y el 17% la ha conseguido.
+    <br> Una vez que alguien entra en una de tus cuentas, puede entrar en todas ellas si utilizas la misma contraseña.
+    <br> Por eso es tan crítico tener una mezcla de contraseñas complejas que se usan para aumentar la seguridad de tu cuenta en línea y en la nube.
+    <br> Sin múltiples contraseñas, te arriesgas a un devastador pirateo de todas tus cuentas.
+    <br> Los administradores de contraseñas te obligan a reforzar tu seguridad digital, al tiempo que almacenan de forma segura tu información sensible y la protegen de los malos actores.
+  </p>
+  <h2>Lista de gestores de contraseña</h2>
+  <p>
+    A continuación hemos destacado a nuestros candidatos para ser los mejores administradores de contraseñas del mercado. Para ello se tiene en cuenta la seguridad, la usabilidad, el precio y la funcionalidad.
+    <br> Si quieres tener la seguridad de todos los mejores administradores de contraseñas, pero no quieres pagar por ellas, considera alguna de estas opciones gratuitas.
+    <br> Mientras que la mayoría ofrece algún tipo de modelo de freemium, estos contendientes proporcionan la mayor amplitud de funcionalidad sin ningún coste.
+  </p>
+  <ul>
+    <li><a href="https://bitwarden.com">Bitwarden</a></li>
+    <li><a href="https://nordpass.com/">NordPass</a></li>
+    <li><a href="https://keepass.info/">KeePass</a></li>
+    <li><a href="https://www.roboform.com/">RoboForm</a></li>
+    <li><a href="https://www.stickypassword.com/">Sticky Password</a></li>
+    <li><a href="https://www.lastpass.com/">LastPass</a></li>
+    <li><a href="https://www.dashlane.com/">Dashlane</a></li>
+    <li><a href="https://1password.com/">1Password</a></li>
+    <li><a href="https://www.keepersecurity.com/">Keeper</a></li>
+  </ul>
+</div>
